2009-09-03  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* build/META: version change

2009-09-02  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* src/libs/ocamlnet/extNetdate.ml*: [printer_date] added

	* src/core/extlib/IO.ml*: [on_lines_out] added, [tab_out] rewritten from [on_lines_out]

2009-09-01 David Rajchenbach-Teller <D.O.Teller@gmail.com>

	* myocamlbuild.ml, src/core/extlib/extPervasives.ml, src/core/extlib/extPervasives.mli, src/libs/_tags, src/libs/libs.mlpack, src/libs/ocamlnet/_tags, src/main/nothreads/_tags, src/main/nothreads/batteries.ml, src/main/threads/_tags, src/main/threads/batteries.ml: added module [Http]


2009-06-29  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* src/syntax/pa_openin/pa_openin.ml: should now work also in signatures

2009-06-23  Bruno Daniel  <Bruno.Daniel@gmx.net>

	* dynArray.ml: fixed memory corruption in [insert]
	
2009-06-23  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* configure.ac: Now detecting OS

2009-06-21  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* doc/batteries/myocamlbuild.ml: [is_threaded] created

	* myocamlbuild.ml: "-linkpkg" now also for native programs

	* doc/batteries/myocamlbuild.ml: reorganised module Dynamic

	* configure.ac: trivial typo

2009-06-19  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/IO.mli,
	* src/core/extlib/innerIO.ml*: [get_output_id], [get_input_id] added

	* testsuite/main.ml: now using [Test_unix]

	* testsuite/test_unix.ml: created

	* src/core/extlib/extPervasives.ml*: [printer_exn] added

	* src/core/extlib/bitSet.ml: [print] now uses [8*len] and not [len]

	* src/core/extlib/bitSet.ml: [diff] now handles all bits of both [a] and [b]

2009-06-13  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* Makefile.in: [BUILD_DOC] now initialized from [@BUILD_DOC@]

	* Makefile.in: [all] now forces [install-doc] only if [BUILD_DOC] is [yes]
